# InsightClass

./: .gitignore  CLAUDE.md  InsightClass-Web-Portable.spec  InsightClass-Web.spec  InsightClass.spec  LICENSE  README.md  installer.iss  pyproject.toml  test_environment.py
configs/: classes.yaml  dataset_manifest.example.yaml  dataset_manifest_v2.yaml  experiment_compare.example.yaml  inference.ultralytics.example.yaml  inference.yaml  inference_baseline.yaml  training.ultralytics.example.yaml  training.yaml  training_v2_ultralytics.yaml  training_v2_ultralytics_yolo26n.yaml
data/annotation_batch_01/: lables_1.txt
data/labels_01/: classroom_000_f002040.txt  classroom_000_f003480.txt  classroom_001_f001800.txt  classroom_001_f002400.txt  classroom_001_f003240.txt  classroom_001_f003960.txt  classroom_001_f005280.txt  classroom_001_f010080.txt  classroom_002_f001080.txt  classroom_002_f002400.txt  classroom_002_f005760.txt  classroom_002_f006960.txt  classroom_003_f002160.txt  classroom_003_f003240.txt  (+44 more)
docs/: 00_project_guide.md  01_快速上手.md  02_录制操作手册.md  03_视频处理手册.md  04_X-AnyLabeling操作手册.md  07_服务器训练手册.md  08_本地Demo测试.md  08_项目架构文档.md  09_前端使用手册.md  09_打包与发行.md  X-AnyLabeling操作手册.md  getting_started_guide.md  project_guide.md  实验手册.md  录制操作手册.md  快速上手.md  标注规范.md  项目整体架构文档.md
packaging/: README.txt  启动服务.bat
scripts/: build_package.ps1  extract_annotation_frames.py  prepare_dataset.py  record_multi_rtsp.py  rtsp_preview.py  sample_for_annotation.py  server_setup.sh  server_train.sh
tests/: test_cli.py  test_manifest.py  test_yolo_inspection.py
(+230 files in other folders)
