[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insightclass"
version = "0.1.0"
description = "Baseline pipeline for classroom student behavior detection."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "InsightClass Team" }
]
dependencies = [
  "numpy>=1.24",
  "PyYAML>=6.0",
  "opencv-python>=4.8",
]

[project.optional-dependencies]
ultralytics = [
  "ultralytics>=8.2",
]
supervision = [
  "supervision>=0.22.0",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
insightclass = "insightclass.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
